--- a/src/pages/ui-kit/cards/cards.scss
+++ b/src/pages/ui-kit/cards/cards.scss
@@ -57,7 +57,7 @@
   &__room-card {
     margin-bottom: 40px;
   }
-  &__calendar {
+  &__date-dropdown {
     margin-bottom: 88px;
   }
   &__room-card {
