--- a/src/components/search-room-card/search-room-card.pug
+++ b/src/components/search-room-card/search-room-card.pug
@@ -11,7 +11,7 @@ mixin search-room-card()
       form(action="/mock-address", method="post")
         .search-room-card__title Найдём номера под ваши пожелания
         .search-room-card__date-dropdown.js-search-room-card__date-dropdown
-          +date-dropdown({ title: 'Прибытие', title2: 'Выезд' })
+          +date-dropdown({ type: 'normal', title: 'Прибытие', title2: 'Выезд' })
         .search-room-card__dropdown.js-search-room-card__dropdown  
           +dropdown({ title: 'Гости', elements: consts.dropdownInSearchRoomCard, hasButtons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'] })
         .search-room-card__submit-button  
